# beehive

./: .gitignore  Beehive_S3_Pointer_Smoke_Adapter_BODY_JSON.json  README.md  codex_b2_1_real_smoke_instruction.md  index.html  package-lock.json  package.json  smoke_control.json  upload_updated_raw_to_s3.py
beehive_s3_smoke_kit/: codex_b2_1_real_smoke_instruction.md  n8n_beehive_s3_pointer_smoke_workflow.json  pipeline.s3_smoke.example.yaml  prepare_selected50_s3_smoke.py  s3_real_smoke_miniguide.md
config/: workspaces.yaml  workspaces.yaml.bak.20260514T091433.881Z.1778750073881195267  workspaces.yaml.bak.20260514T103108.589Z.1778754668589141001  workspaces.yaml.bak.20260514T115116.556Z.1778759476556477270
demo/: README.md
docs/: beehive_n8n_b0_feedback.md  beehive_n8n_b0_plan.md  beehive_s3_b10_runtime_contract_hardening_feedback.md  beehive_s3_b10_runtime_contract_hardening_plan.md  beehive_s3_b11_resource_classes_worker_pools_feedback.md  beehive_s3_b11_resource_classes_worker_pools_plan.md  beehive_s3_b12_worker_leases_feedback.md  beehive_s3_b12_worker_leases_plan.md  beehive_s3_b13_worker_operations_feedback.md  beehive_s3_b13_worker_operations_plan.md  (+106 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_server.rs  lib.rs  main.rs  s3_client.rs  s3_control_envelope.rs  s3_manifest.rs  s3_reconciliation.rs  save_path.rs
src-tauri/src/bootstrap/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/dashboard/: mod.rs
src-tauri/src/database/: entities.rs  mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/executor/: mod.rs
src-tauri/src/file_open/: mod.rs
src-tauri/src/file_ops/: mod.rs
src-tauri/src/file_safety/: mod.rs
src-tauri/src/http_api/: mod.rs
src-tauri/src/pipeline_editor/: mod.rs
src-tauri/src/services/: artifacts.rs  entities.rs  mod.rs  pipeline.rs  runtime.rs  selected_runner.rs  workers.rs  workspaces.rs
src-tauri/src/state_machine/: mod.rs
src-tauri/src/workdir/: mod.rs
(+172 files in other folders)
