[package]
name = "beehive"
version = "0.1.0"
description = "Stage-based JSON pipeline desktop foundation"
authors = ["beehive"]
edition = "2021"

[lib]
name = "beehive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "beehive"
path = "src/main.rs"

[[bin]]
name = "beehive-server"
path = "src/bin/beehive-server.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
chrono = { version = "0.4.41", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
opener = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.20.0"
